# corolib

./: .vsconfig  CMakeLists.txt  LICENSE.md  README.md  qt5.pro
examples/boost/: CMakeLists.txt  README.md
examples/clientserver1/: CMakeLists.txt  README.md  client1.cpp  client1a.cpp  client1b.cpp  client1c.cpp  client3.cpp  client3WA.cpp  client3WAny.cpp  client4obs.cpp  client4obs2.cpp  client4obs3.cpp  client5thr.cpp  clientserver.cpp  endpoints.h  server.cpp
examples/clientserver2/: CMakeLists.txt  README.md  client1.cpp  client1a.cpp  endpoints.h  server.cpp  server2.cpp
examples/clientserver3/: CMakeLists.txt  README.md  client1.cpp  client2.cpp  dispatcher.h  dispatcher2.h  dispatcher3.h  dispatcher4.h  endpoints.h  reqresptypes.h  server.cpp  server2.cpp  server3.cpp  server4.cpp  server5.cpp  server6.cpp  server7.cpp  server8.cpp  server8a.cpp  server9.cpp  server9a.cpp  serverrequest.h  serverrequest2.h
examples/clientserver4/: CMakeLists.txt  README.md  client1.cpp  endpoints.h  server.cpp  server2.cpp
examples/corolab/: CMakeLists.txt  README.md  csemaphore.h  p0010.cpp  p0020.cpp  p0030.cpp  p0040.cpp  p0050.cpp  p0060.cpp  p0100.cpp  p0110.cpp  p0120.cpp  p0200.cpp  p0300.cpp  p0310.cpp  p0320.cpp  p0330.cpp  p0340.cpp  p0345.cpp  p0400.cpp  p0403a.cpp  p0403at.cpp  p0403b.cpp  p0403bt.cpp  p0403c.cpp  p0403ct.cpp  p0403d.cpp  p0403dt.cpp  p0406.cpp  p0414.cpp  p0415a.cpp  p0416.cpp  p0418.cpp  p0418exp1.cpp  p0418exp2.cpp  p0418exp3.cpp  p0418exp4.cpp  p0419.cpp  p0420.cpp  p0422.cpp  (+33 more)
examples/qt5/: CMakeLists.txt  README.md  qt5.pro
examples/study-initial_suspend/: CMakeLists.txt  README.md  manual_executor.h  p0110_bool.cpp  p0120_coroutine_handle.cpp  p1000_void.cpp  p1000e_void.cpp  p1000l_void.cpp  p1010_bool.cpp  p1010e_bool.cpp  p1010l_bool.cpp  p1020_coroutine_handle.cpp  p1020e_coroutine_handle.cpp  p1020l_coroutine_handle.cpp  p1030_corolib.cpp  p1030e_corolib.cpp  p1100_void.cpp  p1100e_void.cpp  p1100l_void.cpp  p1110_bool.cpp  p1110e_bool.cpp  p1110l_bool.cpp  p1120_coroutine_handle.cpp  p1120e_coroutine_handle.cpp  p1120l_coroutine_handle.cpp  p1130e_corolib.cpp  p1200e_void.cpp  p1200l_void.cpp  p1210e_bool.cpp  p1210l_bool.cpp  p1220e_coroutine_handle.cpp  p1220l_coroutine_handle.cpp  p1230_corolib.cpp  p1230e_corolib.cpp  p1320e_coroutine_handle-thread.cpp  p1320e_coroutine_handle.cpp  p1320l_coroutine_handle-thread.cpp  p1320l_coroutine_handle.cpp  p1322_coroutine_handle.cpp  p1322e_coroutine_handle-thread.cpp  (+16 more)
examples/transform/: CMakeLists.txt  README.md  auto_reset_event.h  config.h  lbcoroutine.h  p0100trf.cpp  p0200-f.h  p0200-g.h  p0200-h.h  p0200.cpp  p0200.h  p0200lb.cpp  p0200trf.cpp  p0202-f.h  p0202.cpp  p0202lb.cpp  p0202trf.cpp  p0204.cpp  p0204lb.cpp  p0204trf.cpp  p0206.cpp  p0206lb.cpp  p0206trf.cpp  p0210-f.h  p0210-g.h  p0210-h.h  p0210.cpp  p0210trf.cpp  p0216.cpp  p0216trf.cpp  p0220-f.h  p0220-g.h  p0220-h.h  p0220.cpp  p0220.h  p0220trf.cpp  p0226.cpp  p0226trf.cpp  p0230.cpp  p0230trf.cpp  (+62 more)
examples/tutorial/: CMakeLists.txt  README.md  async_file.h  class01.cpp  class01.h  class02.cpp  class02.h  eventqueue.cpp  eventqueue.h  eventqueuethr.cpp  eventqueuethr.h  mini0.h  mini1.h  p1000.cpp  p1000.pro  p1001-recursive.cpp  p1002-no-coroutines.cpp  p1010-thread.cpp  p1011-thread-recursive.cpp  p1050-resume_same_thread.cpp  p1052-resume_same_thread.cpp  p1054-resume_same_thread.cpp  p1060-resume_new_thread.cpp  p1062-resume_new_thread.cpp  p1064-resume_new_thread.cpp  p1100-auto_reset_event-1.cpp  p1100-auto_reset_event-1.h  p1100-auto_reset_event.cpp  p1101-auto_reset_event-1-when_all.cpp  p1101-auto_reset_event-1-when_all.h  p1102-auto_reset_event-1-when_any.cpp  p1102-auto_reset_event-1-when_any.h  p1103-auto_reset_event-2.cpp  p1103-auto_reset_event-2.h  p1104-auto_reset_event-2-when_all.cpp  p1104-auto_reset_event-2-when_all.h  p1105-auto_reset_event-2-when_any.cpp  p1105-auto_reset_event-2-when_any.h  p1105-auto_reset_event.cpp  p1106-auto_reset_event-3.cpp  (+178 more)
examples/various-boost/: CMakeLists.txt  README.md  run.bat  timer01.cpp  timer01.h  timer02.cpp  timer02.h  timer03.cpp  timer03.h  timer04.cpp  timer04.h  timer05_async_queue.cpp  timer05_async_queue.h  timer06_async_semaphore.h  timermain01.cpp  timermain02.cpp  timermain03.cpp  timermain04.cpp  timermain05_async_queue.cpp
examples/why-coroutines/: CMakeLists.txt  README.md  buf+msg.h  co-full01.cpp  co-full02.cpp  co-full03.cpp  co-less01.cpp  co-less01th.cpp  co-less02.cpp  co-less03.cpp  co-less04.cpp  co-less05.cpp  co-less06.cpp  co-less07.cpp  common.h  eventqueue.h  p1000-sync-1rmi.cpp  p1000.h  p1000co.cpp  p1000co.h  p1002-sync+thread-1rmi.cpp  p1004-sync+thread-1rmi.cpp  p1010-async-1rmi.cpp  p1012-async-1rmi-async_operation.cpp  p1020-coroutines-1rmi.cpp  p1100-sync-callstack-1rmi.cpp  p1110-async-callstack-1rmi.cpp  p1112-async-callstack-1rmi-cs.cpp  p1120-coroutines-callstack-1rmi.cpp  p1122-coroutines-callstack-1rmi.cpp  p1124-coroutines-callstack-1rmi.cpp  p1126-coroutines-callstack-1rmi.cpp  p1130-coroutines-async-callstack-1rmi.cpp  p1132-coroutines-async-callstack-1rmi-cs.cpp  p1200-sync-3rmis.cpp  p1200.h  p1200co.cpp  p1200co.h  p1200cog.cpp  p1200cog.h  (+22 more)
lib/: CMakeLists.txt  async_operation.cpp  async_operation_register.cpp  commclient.cpp  commcore.cpp  commserver.cpp  commservice.cpp  eventqueue.cpp  lib.pro  print.cpp  tracker.cpp
studies/cfsms/: CMakeLists.txt  README.md  eventqueue.h  messageids.h  messagemapper.h  p1000-cfsm1.h  p1000-cfsm2.h  p1000-cfsms.cpp  p1010-cfsm1-co.h  p1010-cfsms-co.cpp  p1012-cfsm1-co.h  p1012-cfsms-co.cpp  p1014-cfsm1-co.h  p1014-cfsms-co.cpp  run.bat  run.sh
studies/control-flow/: CMakeLists.txt  README.md  counter.cpp  counter.h  mini_awaiter_p.h  p1100ae_void.cpp  p1100al_void.cpp  p1100e_void.cpp  p1100l_void.cpp  p2010e_void-sc.cpp  p2010l_void-sc.cpp  p2020e_void-ma.cpp  p2020l_void-ma.cpp  print.cpp  print.h  run.bat  run.sh  suspend.h  taske_void_p.h  taskl_void_p.h  tracker.cpp  tracker.h
tests/: CMakeLists.txt  README.md  p11XX_tests.cpp  p140X_tests.cpp  p22XX_tests.cpp
(+1059 files in other folders)
