cmake_minimum_required(VERSION 3.17)

project (clientserver3)

if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
	set(CMAKE_CXX_FLAGS "/await:strict /EHsc /D _WIN32_WINNT=0x0601")
elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    set(CMAKE_CXX_FLAGS "-Wall -std=c++20 -fcoroutines")
else()
	message("Unsupported compiler")
endif()

include_directories(../../include ${Boost_INCLUDE_DIR})

link_directories(${Boost_LIBRARY_DIR})

add_executable(cs3-client1 client1.cpp)
target_link_libraries(cs3-client1 corolib corolib-boost)
add_executable(cs3-client2 client2.cpp)
target_link_libraries(cs3-client2 corolib corolib-boost)

add_executable(cs3-server server.cpp)
target_link_libraries(cs3-server corolib corolib-boost)
add_executable(cs3-server2 server2.cpp)
target_link_libraries(cs3-server2 corolib corolib-boost)
add_executable(cs3-server3 server3.cpp)
target_link_libraries(cs3-server3 corolib corolib-boost)
add_executable(cs3-server4 server4.cpp)
target_link_libraries(cs3-server4 corolib corolib-boost)
add_executable(cs3-server5 server5.cpp)
target_link_libraries(cs3-server5 corolib corolib-boost)
add_executable(cs3-server6 server6.cpp)
target_link_libraries(cs3-server6 corolib corolib-boost)
add_executable(cs3-server7 server7.cpp)
target_link_libraries(cs3-server7 corolib corolib-boost)
add_executable(cs3-server8 server8.cpp)
target_link_libraries(cs3-server8 corolib corolib-boost)
add_executable(cs3-server9 server9.cpp)
target_link_libraries(cs3-server9 corolib corolib-boost)
